@@ -1,6 +1,18 @@
 <?xml version="1.0"?>
 <!-- $Id$ -->
 <configuration>
+ <configsection name="storage">
+  <configheader>Storage System Settings</configheader>
+
+  <configswitch name="driver" desc="What storage driver should we use?">sql
+   <case name="sql" desc="SQL">
+    <configsection name="params">
+     <configsql switchname="driverconfig"/>
+    </configsection>
+   </case>
+  </configswitch>
+ </configsection>
+
  <configsection name="favicons">
   <configheader>Virtual File Storage</configheader>
   <configvfs switchname="type" />
