@@ -45,7 +45,11 @@ class Trean_Application extends Horde_Registry_Application
         /* For now, autoloading the Content_* classes depend on there being a
          * registry entry for the 'content' application that contains at least
          * the fileroot entry. */
-        $GLOBALS['injector']->getInstance('Horde_Autoloader')->addClassPathMapper(new Horde_Autoloader_ClassPathMapper_Prefix('/^Content_/', $GLOBALS['registry']->get('fileroot', 'content') . '/lib/'));
+        $GLOBALS['injector']->getInstance('Horde_Autoloader')
+            ->addClassPathMapper(new Horde_Autoloader_ClassPathMapper_Prefix(
+                '/^Content_/',
+                $GLOBALS['registry']->get('fileroot', 'content') . '/lib/'
+            ));
         if (!class_exists('Content_Tagger')) {
             throw new Horde_Exception('The Content_Tagger class could not be found. Make sure the Content application is installed.');
         }
@@ -54,8 +58,11 @@ class Trean_Application extends Horde_Registry_Application
         $GLOBALS['registry']->setTimeZone();
 
         // Create db and gateway instances.
-        $GLOBALS['trean_db'] = $GLOBALS['injector']->getInstance('Horde_Core_Factory_Db')->create('trean');
-        $GLOBALS['trean_gateway'] = $GLOBALS['injector']->getInstance('Trean_Bookmarks');
+        $GLOBALS['trean_db'] = $GLOBALS['injector']
+            ->getInstance('Horde_Core_Factory_Db')
+            ->create('trean', 'storage');
+        $GLOBALS['trean_gateway'] = $GLOBALS['injector']
+            ->getInstance('Trean_Bookmarks');
 
         $topbar = $GLOBALS['injector']->getInstance('Horde_View_Topbar');
         $topbar->search = true;
