@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [jan] Allow to set custom SQL parameters.
 * [jan] Move search box to top menu.
  </notes>
  <contents>
@@ -504,6 +505,7 @@
    <date>2012-11-20</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [jan] Allow to set custom SQL parameters.
 * [jan] Move search box to top menu.
    </notes>
   </release>
