@@ -2,6 +2,7 @@
 v1.0.0-git
 ----------
 
+[jan] Allow to set custom SQL parameters.
 [jan] Move search box to top menu.
 
 
